handlers; md2html improvements; gulpfile update; other changes

--- a/src/geodash/plugins/sidebar_toggle_left/templates/geodash_sidebar_toggle_left.tpl.html
+++ b/src/geodash/plugins/sidebar_toggle_left/templates/geodash_sidebar_toggle_left.tpl.html
@@ -5,7 +5,7 @@
   data-placement="bottom"
   title="Click to toggle sidebar."
   data-intent-name="requestToggleComponent"
-  data-intent-data="{&quot;selector&quot;:&quot;#geodash-map-sidebar-toggle-left, #sparc-sidebar-left, #geodash-map&quot;,&quot;component&quot;:&quot;sidebar&quot;,&quot;position&quot;:&quot;left&quot;}"
+  data-intent-data="{&quot;selector&quot;:&quot;{{ selector }}&quot;,&quot;component&quot;:&quot;sidebar&quot;,&quot;position&quot;:&quot;left&quot;}"
   data-intent-ctrl="geodash-map-sidebar-toggle-left">
   <div
     style="padding: 4px;">
