--- a/src/geodash/plugins/sidebar_toggle_right/templates/geodash_sidebar_toggle_right.tpl.html
+++ b/src/geodash/plugins/sidebar_toggle_right/templates/geodash_sidebar_toggle_right.tpl.html
@@ -5,7 +5,7 @@
   data-placement="bottom"
   title="Click to toggle sidebar."
   data-intent-name="requestToggleComponent"
-  data-intent-data="{&quot;selector&quot;:&quot;#geodash-map-sidebar-toggle-right, #sparc-sidebar-right, #geodash-map&quot;,&quot;component&quot;:&quot;sidebar&quot;,&quot;position&quot;:&quot;right&quot;}"
+  data-intent-data="{&quot;selector&quot;:&quot;{{ selector }}&quot;,&quot;component&quot;:&quot;sidebar&quot;,&quot;position&quot;:&quot;right&quot;}"
   data-intent-ctrl="geodash-map-sidebar-toggle-right">
   <div
     style="padding: 4px;">
