multiple enhancements, features, and fixes
1.  WMTS Support
2.  Modals in build pipeline (geodash.meta.modals in build)
3.  Refractored schemas to recursive sub-objects
4.  Moved GeoDash config modal to geodash-server
5.  Marked overlays as non-editable (needed regression.  add back in later).
6.  typeahead inputs now support "baselayers" as source
7.  Minor api featuers (geodash.api.*)
8.  Popup enhnacements

--- a/src/geodash/plugins/overlays/less/map_overlays.less
+++ b/src/geodash/plugins/overlays/less/map_overlays.less
@@ -26,9 +26,6 @@
       td {
         border: 2px solid blue;
       }
-      td:hover {
-        background: rgba(0, 0, 128, 0.25);
-      }
     }
   }
 
@@ -40,11 +37,22 @@
     box-sizing: padding-box;
   }
 
+}
+
+.geodash-map-overlays.editable {
+
+  .geodash-map-grid.on {
+    table {
+      td:hover {
+        background: rgba(0, 0, 128, 0.25);
+      }
+    }
+  }
+
   .geodash-map-overlay:hover {
     border: 4px solid blue;
     border-radius: 4px;
     cursor: pointer;
   }
-
 
 }
